--- a/MentoMenti/src/main/resources/application.properties
+++ b/MentoMenti/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-#Web ContextRootPath and PortNumber Settings
+#Web PortNumber Settings
 server.port=8000
 
-#JSP Path
+#JSP Use & Setting
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+#static resource
+spring.mvc.static-path-pattern=/resources/**
