[application.properties 복구]

--- a/MentoMenti/src/main/resources/application.properties
+++ b/MentoMenti/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#Web PortNumber Settings
+server.port=8000
 
+#JSP Use & Setting
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+#static resource
+spring.mvc.static-path-pattern=/resources/** 
