보드 만들었습니다

--- a/MentoMenti/bin/src/main/resources/application.properties
+++ b/MentoMenti/bin/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.mvc.view.suffix=.jsp
 #static resource
 spring.mvc.static-path-pattern=/resources/**
 
-# Database Setting
+#Database Setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/MentoMenti?serverTimeZone=UTC&CharacterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/mentomenti?serverTimeZone=UTC&CharacterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=kaptain1
