--- a/MentoMenti/src/main/resources/application.properties
+++ b/MentoMenti/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mentomenti?serverTimeZone=UTC&CharacterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=kaptain1
+
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=kaptain1
+server.ssl.key-alias=mentomentiserver
