--- a/MentoMenti/src/main/resources/application.properties
+++ b/MentoMenti/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=8000
 
 #JSP Use & Setting
+# if not setting, default : webapp
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
