--- a/MentoMenti/src/main/resources/application.properties
+++ b/MentoMenti/src/main/resources/application.properties
@@ -19,3 +19,5 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=kaptain1
 server.ssl.key-alias=mentomentiserver
+
+project.ignoreNullWsContainer = true
