--- a/MentoMenti/bin/pom.xml
+++ b/MentoMenti/bin/pom.xml
@@ -29,6 +29,13 @@
   			<artifactId>json-simple</artifactId>
   			<version>1.1.1</version>
 		</dependency>
+		
+		<dependency>
+		     <groupId>javax.websocket</groupId>
+		     <artifactId>javax.websocket-api</artifactId>
+		     <scope>provided</scope>
+		     <version>1.1</version>
+   		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
