--- a/MentoMenti/src/main/resources/application.properties
+++ b/MentoMenti/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.mvc.view.suffix=.jsp
 
 #static resource
 spring.mvc.static-path-pattern=/resources/**
+spring.cache.type=NONE
 
 #Database Setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -19,4 +20,3 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=kaptain1
 server.ssl.key-alias=mentomentiserver
-
